# bryc

./: .gitignore  CMakeLists.txt  README.md  TODO.md  backup.cmd  bryc.cmake  bryc.py
src/: bryc-base.h  test.c
tests/: CMakeLists.txt  t0.c  t1.py  t2-main.c  t2.h  t3-vec.c  t3.py  t4.c  t4.h  t4.py  t5.c  t5.py  t6.c
tests/t0/: CMakeLists.txt  t0.c  t0.csv
tests/t1/: CMakeLists.txt  t1-main.c  t1.py
